// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`editor operation regression workflow: add video → add image → move clip → trim 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 4000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: multi-track with text overlay 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 1000,
          "text": {
            "backgroundColor": "black@0.5",
            "color": "white",
            "fontSize": 24,
            "value": "Title",
          },
        },
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 1000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 4000,
          "text": {
            "color": "yellow",
            "fontSize": 16,
            "value": "Subtitle",
          },
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: cross-track move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 1000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 0,
          "text": {
            "color": "white",
            "fontSize": 20,
            "value": "Overlay",
          },
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 2000,
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: duration change clamps existing clips 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: update clip properties 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "crop": {
            "height": 70,
            "width": 140,
            "x": 10,
            "y": 10,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 45,
            "scale": 1.5,
            "x": 20,
            "y": -10,
          },
          "volume": 0.5,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: add and remove clips 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "a1",
          "clipKind": "audio",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 8000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: left trim adjusts startMs and inMs 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 1000,
          "outMs": 5000,
          "startMs": 1000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: left and right trim combined 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 500,
          "outMs": 3500,
          "startMs": 500,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: update blendMode 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "blendMode": "cover",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: overlap snap on same-track move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: remove track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: text with fontFamily and align 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
          "text": {
            "align": "right",
            "backgroundColor": "#000000@0.8",
            "color": "#ff0000",
            "fontFamily": "Noto Sans JP",
            "fontSize": 32,
            "value": "Styled Title",
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: add clip to specific target track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 2000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 0,
          "text": {
            "color": "white",
            "fontSize": 16,
            "value": "T",
          },
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: audio clip with volume 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "a1",
          "clipKind": "audio",
          "durationMs": 10000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 10000,
          "startMs": 0,
          "volume": 0.3,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: empty-asset video clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: empty-asset clip alongside normal clips 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "image",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 1000,
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: move empty-asset clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 3000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: trim empty-asset clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: remove empty-asset clip removes empty track 1`] = `
{
  "tracks": [],
}
`;

exports[`editor operation regression workflow: update empty-asset clip properties 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
          "transform": {
            "rotation": 30,
            "scale": 1.2,
            "x": 10,
            "y": -5,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: clamp empty-asset clip to duration 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip to existing track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip creates new track when no target 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 1000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip with title sets text 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
          "text": {
            "backgroundColor": "black",
            "color": "white",
            "fontSize": 48,
            "value": "Text",
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip clamped by maxDuration 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 1000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 9000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip then move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip multiple kinds on same track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 0,
        },
        {
          "assetId": "",
          "clipKind": "image",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 3000,
        },
        {
          "assetId": "",
          "clipKind": "audio",
          "durationMs": 2000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split video clip at midpoint 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2500,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-1",
          "inMs": 2500,
          "outMs": 5000,
          "startMs": 2500,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split clip near start 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 100,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 100,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4900,
          "id": "clip-1",
          "inMs": 100,
          "outMs": 5000,
          "startMs": 100,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split clip near end 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4900,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 4900,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 100,
          "id": "clip-1",
          "inMs": 4900,
          "outMs": 5000,
          "startMs": 4900,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split trimmed clip preserves in/out 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 1500,
          "id": "clip-0",
          "inMs": 1000,
          "outMs": 2500,
          "startMs": 1000,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 1500,
          "id": "clip-1",
          "inMs": 2500,
          "outMs": 4000,
          "startMs": 2500,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split clip with transition clears transition on right 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 1000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 4500,
          "transition": {
            "durationMs": 500,
            "type": "fade",
          },
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 2000,
          "id": "clip-2",
          "inMs": 1000,
          "outMs": 3000,
          "startMs": 5500,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split empty-asset clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 1500,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 1500,
          "startMs": 0,
        },
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 1500,
          "id": "clip-1",
          "inMs": 1500,
          "outMs": 3000,
          "startMs": 1500,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split then move right part 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2500,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-1",
          "inMs": 2500,
          "outMs": 5000,
          "startMs": 5000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split clip within transition zone clears transition on left 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 200,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 200,
          "startMs": 4500,
          "transition": undefined,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 2800,
          "id": "clip-2",
          "inMs": 200,
          "outMs": 3000,
          "startMs": 4700,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple delete middle clip shifts subsequent 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "a1",
          "clipKind": "audio",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple delete first clip shifts all 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple delete last clip (no shift needed) 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple delete only clip removes track 1`] = `
{
  "tracks": [],
}
`;

exports[`editor operation regression workflow: ripple delete multi-track only affects same track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 2000,
          "text": {
            "color": "white",
            "fontSize": 20,
            "value": "Overlay",
          },
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple trim right shorter shifts subsequent left 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 3000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple trim right longer shifts subsequent right 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 4000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple trim + ripple delete combined 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
        {
          "assetId": "a1",
          "clipKind": "audio",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 3000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple delete first clip when second has transition 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
          "transition": undefined,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 3000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple delete clip with transition (net shift) 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 5500,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple trim with transition on subsequent clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 4000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 3500,
          "transition": {
            "durationMs": 500,
            "type": "fade",
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: duplicate video clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 5000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: duplicate clip clamped by maxDuration 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 5000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: paste clip at playhead on same track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 6000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: paste clip on different track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 0,
          "text": {
            "color": "white",
            "fontSize": 20,
            "value": "Overlay",
          },
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 3000,
          "transition": undefined,
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: paste attributes from styled clip to plain clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "blendMode": "screen",
          "clipKind": "video",
          "crop": {
            "height": 90,
            "width": 160,
            "x": 0,
            "y": 0,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 30,
            "scale": 1.5,
            "x": 10,
            "y": -5,
          },
        },
        {
          "assetId": "i1",
          "blendMode": "screen",
          "clipKind": "image",
          "crop": {
            "height": 90,
            "width": 160,
            "x": 0,
            "y": 0,
          },
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
          "transform": {
            "rotation": 30,
            "scale": 1.5,
            "x": 10,
            "y": -5,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: duplicate then move the duplicate 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 15000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: copy-paste with transform + blend attributes 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "blendMode": "overlay",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 90,
            "scale": 2,
            "x": 50,
            "y": 50,
          },
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
        {
          "assetId": "v1",
          "blendMode": "overlay",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 8000,
          "transform": {
            "rotation": 90,
            "scale": 2,
            "x": 50,
            "y": 50,
          },
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression multi-select: removeClips removes multiple clips at once 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression multi-select: moveClips shifts multiple clips by delta 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 1000,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression group: groupClips assigns groupId, ungroupClips clears it 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "groupId": "group-0",
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "groupId": "group-0",
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression group: groupClips assigns groupId, ungroupClips clears it 2`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "groupId": undefined,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "groupId": undefined,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`track lock & mute regression setTrackLocked then attempt operations 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
      "locked": true,
    },
  ],
}
`;

exports[`track lock & mute regression setTrackLocked then attempt operations 2`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
      "locked": false,
    },
  ],
}
`;

exports[`track lock & mute regression setTrackMuted preserves track state 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
      "muted": true,
    },
  ],
}
`;

exports[`track lock & mute regression setTrackMuted preserves track state 2`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
      "muted": false,
    },
  ],
}
`;

exports[`editor operation regression workflow: ripple delete of one clip in a group 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "groupId": "group-0",
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
        {
          "assetId": "a1",
          "clipKind": "audio",
          "durationMs": 22000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 22000,
          "startMs": 3000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: removeTransition restores startMs and clears transition 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: setTrackName 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
      "name": "My Video Track",
    },
  ],
}
`;

exports[`editor operation regression workflow: setTrackColor 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "color": "#DC322F",
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: duplicate clip with transition clears transition on duplicate 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 4500,
          "transition": {
            "durationMs": 500,
            "type": "fade",
          },
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 7500,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: split then ripple delete one half 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-0",
          "inMs": 2500,
          "outMs": 5000,
          "startMs": 0,
          "transition": undefined,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 2500,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: clip with keyframeTracks preserves through move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: clip with keyframeTracks preserves through trim 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 4000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: clip with keyframeTracks preserves through split 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 2500,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-1",
          "inMs": 2500,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 2500,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: clip with keyframeTracks preserves through duplicate 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 5000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: clip with keyframeTracks preserves through paste 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 10000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: pasteAttributes does not copy keyframeTracks 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "scale": 1.5,
            "x": 10,
            "y": 5,
          },
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
          "transform": {
            "scale": 1.5,
            "x": 10,
            "y": 5,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: clip with keyframeTracks + transform + blend 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "blendMode": "screen",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2500,
                  "value": 100,
                },
                {
                  "timeMs": 5000,
                  "value": 0,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "ease-in",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 1000,
                  "value": 1,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 15,
            "scale": 0.8,
            "x": 10,
            "y": -5,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: addKeyframe creates track and adds keyframes 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "easing": "linear",
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "easing": "ease-out",
                  "timeMs": 2000,
                  "value": 100,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "easing": "linear",
                  "timeMs": 0,
                  "value": 1,
                },
                {
                  "easing": "ease-in",
                  "timeMs": 3000,
                  "value": 0,
                },
              ],
              "property": "opacity",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: addKeyframe replaces at same time 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "easing": "ease-in-out",
                  "timeMs": 1000,
                  "value": 99,
                },
              ],
              "property": "transform.x",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: removeKeyframe removes single keyframe 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2000,
                  "value": 100,
                },
              ],
              "property": "transform.x",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: removeKeyframe removes last kf cleans up track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": undefined,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: updateKeyframe changes value and easing 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "easing": "linear",
                  "timeMs": 0,
                  "value": 1,
                },
                {
                  "easing": "ease-in-out",
                  "timeMs": 3000,
                  "value": 1.5,
                },
              ],
              "property": "transform.scale",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: keyframe ops combined with move and trim 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 4000,
                  "value": 200,
                },
              ],
              "property": "transform.x",
            },
          ],
          "outMs": 4000,
          "startMs": 1000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: keyframe ops with multiple properties on same clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "keyframeTracks": [
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2000,
                  "value": 100,
                },
              ],
              "property": "transform.x",
            },
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 0,
                },
                {
                  "timeMs": 2000,
                  "value": -50,
                },
              ],
              "property": "transform.y",
            },
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 1,
                },
                {
                  "timeMs": 2000,
                  "value": 1.5,
                },
              ],
              "property": "transform.scale",
            },
            {
              "keyframes": [
                {
                  "timeMs": 0,
                  "value": 1,
                },
                {
                  "timeMs": 2000,
                  "value": 0,
                },
              ],
              "property": "volume",
            },
          ],
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: set clip speed to 2x 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2500,
          "speed": 2,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: set clip speed to 0.5x 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 10000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 10000,
          "speed": 0.5,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: change speed multiple times preserves source duration 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "speed": 1,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: speed change + trim + move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2000,
          "speed": 2,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 3000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: add color correction to video clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "colorCorrection": {
            "brightness": 0.3,
            "contrast": -0.2,
            "hue": 15,
            "saturation": 0.5,
            "temperature": 0.1,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: color correction preserved through move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "colorCorrection": {
            "brightness": 0.5,
            "contrast": 0.2,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 2000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: color correction preserved through trim 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "colorCorrection": {
            "hue": 90,
            "saturation": -0.5,
          },
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 4000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: color correction preserved through split 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "colorCorrection": {
            "brightness": 0.2,
            "temperature": -0.3,
          },
          "durationMs": 2500,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2500,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "colorCorrection": {
            "brightness": 0.2,
            "temperature": -0.3,
          },
          "durationMs": 2500,
          "id": "clip-1",
          "inMs": 2500,
          "outMs": 5000,
          "startMs": 2500,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: color correction preserved through duplicate 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "colorCorrection": {
            "contrast": 0.8,
            "hue": -45,
            "saturation": -0.3,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "colorCorrection": {
            "contrast": 0.8,
            "hue": -45,
            "saturation": -0.3,
          },
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 5000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: color correction + transform + blend mode combined 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "blendMode": "multiply",
          "clipKind": "video",
          "colorCorrection": {
            "brightness": 0.1,
            "contrast": 0.2,
            "saturation": 0.3,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 15,
            "scale": 0.8,
            "x": 10,
            "y": -5,
          },
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: reset color correction (set to undefined) 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "colorCorrection": undefined,
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: add video filters to video clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "videoFilters": [
            {
              "strength": 0.5,
              "type": "blur",
            },
            {
              "strength": 0.7,
              "type": "sepia",
            },
          ],
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: video filters preserved through move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 2000,
          "videoFilters": [
            {
              "strength": 1,
              "type": "grayscale",
            },
          ],
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: video filters preserved through trim 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 4000,
          "startMs": 0,
          "videoFilters": [
            {
              "strength": 0.3,
              "type": "blur",
            },
            {
              "strength": 0.5,
              "type": "vignette",
            },
          ],
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: video filters preserved through split 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2500,
          "startMs": 0,
          "videoFilters": [
            {
              "strength": 0.8,
              "type": "sharpen",
            },
          ],
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-1",
          "inMs": 2500,
          "outMs": 5000,
          "startMs": 2500,
          "transition": undefined,
          "videoFilters": [
            {
              "strength": 0.8,
              "type": "sharpen",
            },
          ],
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: video filters preserved through duplicate 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "videoFilters": [
            {
              "strength": 0.4,
              "type": "grain",
            },
            {
              "strength": 0.6,
              "type": "grayscale",
            },
          ],
        },
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 5000,
          "transition": undefined,
          "videoFilters": [
            {
              "strength": 0.4,
              "type": "grain",
            },
            {
              "strength": 0.6,
              "type": "grayscale",
            },
          ],
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: video filters + color correction + transform combined 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "blendMode": "multiply",
          "clipKind": "video",
          "colorCorrection": {
            "brightness": 0.1,
            "contrast": 0.2,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 15,
            "scale": 0.8,
            "x": 10,
            "y": -5,
          },
          "videoFilters": [
            {
              "strength": 0.2,
              "type": "blur",
            },
            {
              "strength": 0.5,
              "type": "sepia",
            },
          ],
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: reset video filters (set to undefined) 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "videoFilters": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: set chroma key on video clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "chromaKey": {
            "blend": 0.1,
            "color": "#00ff00",
            "similarity": 0.3,
          },
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: chroma key preserved through split 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "chromaKey": {
            "blend": 0.2,
            "color": "#0000ff",
            "similarity": 0.5,
          },
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2500,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "chromaKey": {
            "blend": 0.2,
            "color": "#0000ff",
            "similarity": 0.5,
          },
          "clipKind": "video",
          "durationMs": 2500,
          "id": "clip-1",
          "inMs": 2500,
          "outMs": 5000,
          "startMs": 2500,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: chroma key preserved through duplicate 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "chromaKey": {
            "blend": 0.15,
            "color": "#00ff00",
            "similarity": 0.4,
          },
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "v1",
          "chromaKey": {
            "blend": 0.15,
            "color": "#00ff00",
            "similarity": 0.4,
          },
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 5000,
          "transition": undefined,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: chroma key + transform combined 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "chromaKey": {
            "blend": 0.1,
            "color": "#00ff00",
            "similarity": 0.3,
          },
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 0,
            "scale": 0.6,
            "x": 20,
            "y": 10,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: remove chroma key (set to undefined) 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "chromaKey": undefined,
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: apply PiP corner-br preset 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 0,
            "scale": 0.3,
            "x": 662,
            "y": 368,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: apply PiP corner-tl preset 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 0,
            "scale": 0.3,
            "x": -662,
            "y": -368,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: apply PiP side-by-side preset 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 0,
            "scale": 0.5,
            "x": -480,
            "y": 0,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: apply PiP top-bottom preset 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 0,
            "scale": 0.5,
            "x": 0,
            "y": -270,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: PiP preset overwrites existing transform 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 0,
            "scale": 0.3,
            "x": 662,
            "y": 368,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`keyframe tracks regression workflow: all four PiP corner presets 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 0,
            "scale": 0.3,
            "x": 662,
            "y": -368,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;
